--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clsx": "^1.2.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-joyride": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
