--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-joyride": "^2.5.0"
+    "geist": "^1.2.2",
+    "next": "^14.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-joyride": "^2.7.4"
   },
   "devDependencies": {
-    "@types/node": "18.6.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.3",
-    "typescript": "4.7.4"
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.63",
+    "@types/react-dom": "^18.2.20",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.2",
+    "typescript": "^5.3.3"
   }
 }
